Fixes scrolling on mobile devices in the quiz manager

--- a/src/app/quiz/quiz-manager/quiz-manager/question-card/question-card.component.scss
+++ b/src/app/quiz/quiz-manager/quiz-manager/question-card/question-card.component.scss
@@ -3,7 +3,6 @@
 }
 
 .card-header {
-  touch-action: none;
   user-select: none;
 }
 
